createdAt solved and added scrollbar in frontend

--- a/app/code/Ambab/EmiCalculator/view/frontend/web/css/style.css
+++ b/app/code/Ambab/EmiCalculator/view/frontend/web/css/style.css
@@ -8,7 +8,7 @@ div#header-mpdal {
 div#row {
     border: 1px solid;
     padding: 10px;
-    background-color: silver;
+    background-color: #c0c0c0;
 }
 #customers {
     font-family: Arial, Helvetica, sans-serif;
